<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/waiting_room" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_seat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="@id/guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/rv_seat"
        app:layout_constraintEnd_toEndOf="@id/actionButton"
        app:layout_constraintStart_toStartOf="@id/guide_line"
        app:layout_constraintTop_toTopOf="@id/rv_seat" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/chat"
        app:layout_constraintBottom_toBottomOf="@id/actionButton"
        app:layout_constraintStart_toStartOf="@id/rv_seat" />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>